--- a/patch 1.1/html/faculty-dashboard.html
+++ b/patch 1.1/html/faculty-dashboard.html
@@ -29,10 +29,7 @@
                 <i class="fa-solid fa-house"></i>
                 <span class="link-name">Home</span>
             </a>
-            <a href="#" class="link">
-                <i class="fa-solid fa-calendar"></i>
-                <span class="link-name">Calendar</span>
-            </a>
+            
         </div>
         <div class="navbar-group">
             <a href="#" class="link" id="dropdown-1">
@@ -96,9 +93,9 @@
                         </span>
                     </div>
                     <div class="class-meta">
-                        <a href="#" class="record" class="link-1"><i class="fa-solid fa-arrow-trend-up "></i></a>
-                        <a href="#" class="folder" class="link-1"><i class="fa-regular fa-folder "></i></a>
-                        <a href="#" class="settings" class="link-1"><i class="fa-solid fa-ellipsis-vertical "></i></a>
+                        <a href="#" class="link-1 record"><i class="fa-solid fa-arrow-trend-up "></i></a>
+                        <a href="#" class="link-1 folder"><i class="fa-regular fa-folder "></i></a>
+                        <a href="#" class="link-1 settings"><i class="fa-solid fa-ellipsis-vertical "></i></a>
                     </div>
                 </div>
 
@@ -126,9 +123,9 @@
                         </span>
                     </div>
                     <div class="class-meta">
-                        <a href="#" class="record" class="link-1"><i class="fa-solid fa-arrow-trend-up "></i></a>
-                        <a href="#" class="folder" class="link-1"><i class="fa-regular fa-folder "></i></a>
-                        <a href="#" class="settings" class="link-1"><i class="fa-solid fa-ellipsis-vertical "></i></a>
+                        <a href="#" class="link-1 record"><i class="fa-solid fa-arrow-trend-up "></i></a>
+                        <a href="#" class="link-1 folder"><i class="fa-regular fa-folder "></i></a>
+                        <a href="#" class="link-1 settings"><i class="fa-solid fa-ellipsis-vertical "></i></a>
                     </div>
                 </div>
             <a href="#">
@@ -155,9 +152,9 @@
                     </span>
                 </div>
                     <div class="class-meta">
-                        <a href="#" class="record" class="link-1"><i class="fa-solid fa-arrow-trend-up "></i></a>
-                        <a href="#" class="folder" class="link-1"><i class="fa-regular fa-folder "></i></a>
-                        <a href="#" class="settings" class="link-1"><i class="fa-solid fa-ellipsis-vertical "></i></a>
+                        <a href="#" class="link-1 record"><i class="fa-solid fa-arrow-trend-up "></i></a>
+                        <a href="#" class="link-1 folder"><i class="fa-regular fa-folder "></i></a>
+                        <a href="#" class="link-1 settings"><i class="fa-solid fa-ellipsis-vertical "></i></a>
                     </div>
                 </div>
         </div>
