--- a/patch 1.1/html/faculty-submissions.html
+++ b/patch 1.1/html/faculty-submissions.html
@@ -73,7 +73,7 @@
     <main>
         <nav>
             <a href="../html/faculty-submissions.html" class="link active-1">To review</a>
-            <a href="" class="link">Reviewed</a>
+            <a href="../html/faculty-done.html" class="link">Reviewed</a>
         </nav>
     
         <div class="main-container">
@@ -85,22 +85,25 @@
             </select>
 
             <div class="no-due">
+                <br>
                 <h2>No due submissions</h2>
             </div>
             <div class="in-progress">
                 <h2>In progress</h2>
-                <div class="task">
-                    <img src="../static/icons8-question-64.png" width="50" height="50" alt="q">
-                    <div class="task-info">
+                <div class="task" onclick="location.href = '/patch 1.1/html/activity1-webdev.html'">
+                    <div class="task-meta-1">
+                        <img src="../static/icons8-question-64.png" width="50" height="50" alt="q">
                         <span class="task-name">Question</span>
+                    </div>
+                    <div class="task-info">
                         <span class="task-desc">Web Design Development | due 10 Jun</span>
                     </div>
                     <div class="task-meta">
-                        <span>0</span>
+                        <span class="task-submitted">0</span>
                         <span>submitted</span>
                     </div>
                     <div class="task-meta">
-                        <span>0</span>
+                        <span class="task-marked">0</span>
                         <span>marked</span>
                     </div>
                     <div class="opt">
