--- a/patch 1.1/html/webdev-grades.html
+++ b/patch 1.1/html/webdev-grades.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Records | ActTrack</title>
+    <title>Class Records | ActTrack</title>
     <link rel="stylesheet" href="../css/faculty.css">
-    <link rel="stylesheet" href="/profile/css/grades.css">
+    
     <link rel="stylesheet" href="../misc/all.min.css">
     <link rel="stylesheet" href="../misc/fontawesome.min.css">
     <link rel="stylesheet" href="../misc/fonts.css">
@@ -26,7 +26,7 @@
 
     <aside class="navbar open">
         <div class="navbar-group">
-            <a href="./faculty-dashboard.html" class="link">
+            <a href="../html/faculty-dashboard.html" class="link">
                 <i class="fa-solid fa-house"></i>
                 <span class="link-name">Home</span>
             </a>
@@ -41,11 +41,11 @@
                 <span class="link-name toggle">Teaching</span>
             </a>
             <div id="toggle-group">
-                <a href="./faculty-resources.html" class="link visible">
+                <a href="../html/faculty-resources.html" class="link visible">
                     <i class="fa-solid fa-book"></i>
                     <span class="link-name">Resources</span>
                 </a>
-                <a href="../html/faculty-submissions.html" class="link visible">
+                <a href="../html/faculty-submissions.html" class="link visible active">
                     <i class="fa-solid fa-folder"></i>
                     <span class="link-name">Submissions</span>
                 </a>
@@ -64,7 +64,7 @@
                 <i class="fa-solid fa-archive"></i>
                 <span class="link-name">Archived Classes</span>
             </a>
-            <a href="/profile/html/profile-faculty.html" class="link" id="dropdown-1">
+            <a href="#" class="link" id="dropdown-1">
                 <i class="fa-solid fa-gear"></i>
                 <span class="link-name">Settings</span>
             </a>
@@ -75,14 +75,13 @@
         <nav>
             <a href="../html/webdev.html" class="link">Stream</a>
             <a href="../html/webdev-classwork.html" class="link">Classwork</a>
-            <a href="../html/webdev-people.html" class="link">People</a>
             <a href="../html/webdev-grades.html" class="link active-1">Grades</a>
             <a href="../html/faculty-attendance.html" class="link">Attendance</a>
         </nav>
 
         <div class="card-container">
             <div class="card">
-                <h1>Grades</h1>
+                <span></span>
                 <table id="faculty-grades-table-1" class="class-list-table">
                     <thead>
                         <tr>
