--- a/profile/html/dashboard-student.html
+++ b/profile/html/dashboard-student.html
@@ -38,26 +38,92 @@
     <main>
         <div class="subject-container">
             <a href="#">
-                <div class="subject-card">
-                        <div class="subject-title">Web Design Development</div>
-                        <div class="subid">IS221</div>
-                        <div class="professor">Ricafort, Sheryl Ann B.</div>
+                <div class="sub-img">
+                    <div class="subject-card">
+                        <div class="subject-meta">
+                            <span class="subject-title">Web Design Development</span>
+                            <span class="subid">IS221</span>
+                            <span class="professor">Ricafort, Sheryl Ann B.</span>
+                        </div>
+                        </a>
+                    </div>
+                    <div class="act-meta">
+                        <span class="act-dl">due Monday:</span>
+                        <span class="act-list">
+                            <div class="act-title">
+                                <ul>
+                                    <li>
+                                        <a href="../html/activity1-webdev.html" class="link">1:00 pm - Final project presentation</a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <a href="../html/webdev-classwork.html" class="link-1">view all</a>
+                        </span>
+                    </div>
+                    <div class="class-meta">
+                        <a href="#" class="link-1 record"><i class="fa-solid fa-arrow-trend-up "></i></a>
+                        <a href="#" class="link-1 folder"><i class="fa-regular fa-folder "></i></a>
+                        <a href="#" class="link-1 settings"><i class="fa-solid fa-ellipsis-vertical "></i></a>
+                    </div>
                 </div>
-            </a>
-            <a href="#">
-                <div class="subject-card">
-                    <div class="subject-title">Advance Airline Ticketing</div>
-                    <div class="subid">AIS223</div>
-                    <div class="professor">Caguia, Cielito M.</div>
-                </div>
-            </a>
-            <a href="#">
-                <div class="subject-card">
-                    <div class="subject-title">System Analysis and Design</div>
-                    <div class="subid">IS222</div>
-                    <div class="professor">Dasalla, Jerum B.</div>
-                </div>
-            </a>
+                <a href="#">
+                    <div class="sub-img">
+                        <div class="subject-card">
+                            <div class="subject-meta">
+                                <span class="subject-title">Advance Airline Ticketing</span>
+                                <span class="subid">AIS223</span>
+                                <span class="professor">Caguia, Cielito Mercado</span>
+                            </div>
+                        </div>
+                    </a>
+                        <div class="act-meta">
+                            <span class="act-dl">due June 14:</span>
+                            <span class="act-list">
+                                <div class="act-title">
+                                    <ul>
+                                        <li>
+                                            <a href="../html/activity1.html" class="link">5:00 pm - Submission of exam</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <a href="../html/webdev-classwork.html" class="link-1">view all</a>
+                            </span>
+                        </div>
+                        <div class="class-meta">
+                            <a href="#" class="link-1 record"><i class="fa-solid fa-arrow-trend-up "></i></a>
+                            <a href="#" class="link-1 folder"><i class="fa-regular fa-folder "></i></a>
+                            <a href="#" class="link-1 settings"><i class="fa-solid fa-ellipsis-vertical "></i></a>
+                        </div>
+                    </div>
+                <a href="#">
+                    <div class="sub-img">
+                        <div class="subject-card">
+                            <div class="subject-meta">
+                                <span class="subject-title">System Analysis and Design</span>
+                                <span class="subid">IS222</span>
+                                <span class="professor">Dasalla, Jerum Basanes</span>
+                            </div>
+                        </div>
+                    </a>
+                    <div class="act-meta">
+                        <div class="act-dl">due June 21:</div>
+                        <span class="act-list">
+                            <div class="act-title">
+                                <ul>
+                                    <li>
+                                        <a href="../html/activity1-saad.html" class="link">5:00 pm - Final project</a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <a href="../html/webdev-classwork.html" class="link-1">view all</a>
+                        </span>
+                    </div>
+                        <div class="class-meta">
+                            <a href="#" class="link-1 record"><i class="fa-solid fa-arrow-trend-up "></i></a>
+                            <a href="#" class="link-1 folder"><i class="fa-regular fa-folder "></i></a>
+                            <a href="#" class="link-1 settings"><i class="fa-solid fa-ellipsis-vertical "></i></a>
+                        </div>
+                    </div>
         </div>
     </main>
 </body>
