--- a/patch 1.1/html/webdev.html
+++ b/patch 1.1/html/webdev.html
@@ -19,6 +19,7 @@
         <div class="header-right">
             <i class="fa-solid fa-plus" style="font-size: 25px;"></i>
             <img src="../static/tristan.png" width="50" height="50" alt="pfp">
+            <a href="/profile/html/login.html" style="color: red; text-decoration: none;"><i class="fa-solid fa-right-from-bracket"></i> Logout</a>
         </div>
     </header>
 
@@ -28,10 +29,7 @@
                 <i class="fa-solid fa-house"></i>
                 <span class="link-name">Home</span>
             </a>
-            <a href="#" class="link">
-                <i class="fa-solid fa-calendar"></i>
-                <span class="link-name">Calendar</span>
-            </a>
+            
         </div>
         <div class="navbar-group">
             <a href="#" class="link" id="dropdown-1">
